--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+boto3 = "^1.29.3"
 
 [tool.poetry.dev-dependencies]
 bandit = {extras = ["toml"], version = "*"}
