--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-github-actions-annotate-failures = "*"
 pytest-sugar = "*"
 
 [tool.poetry.scripts]
+s3-presigned-url-upload = "s3_presigned_url_upload.main:main"
 
 [tool.poetry-dynamic-versioning]
 enable = true
